--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -3,9 +3,10 @@ ENV PYTHONUNBUFFERED=1
 WORKDIR /app
 
 COPY requirements.txt requirements.txt
-RUN pip install -r requirements.txt
+RUN sfsf pip install -r requirements.txt
 
 COPY app.py app.py
+
 
 EXPOSE 5000
 
