--- a/make-vars/Makefile
+++ b/make-vars/Makefile
@@ -51,8 +51,8 @@ quux = $(baz)
 qux = Hello $(quux)
 quux = Make
 
-corge = start
-corge = $(corge) and add more
+# corge = start
+# corge = $(corge) and add more
 
 test2:
 	@echo "bar=$(bar)"
